force-app/main/default/objects/Journal_Sale__c/Journal_Sale__c.object-meta.xml
<CustomObject>
    <description>Tracks individual journal sales across all channels (Salesforce, Amazon KDP, Etsy). Part of the Journal Business module.</description>
    <label>Journal Sale</label>
    <nameField>
        <displayFormat>SALE-{00000}</displayFormat>
        <label>Sale Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journal Sales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>