force-app/main/default/objects/Journal_Sale__c/fields/Journal_Customer__c.field-meta.xml
<CustomField>
    <fullName>Journal_Customer__c</fullName>
    <label>Journal Customer</label>
    <referenceTo>Journal_Customer__c</referenceTo>
    <relationshipLabel>Journal Sales</relationshipLabel>
    <relationshipName>Journal_Sales</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <description>Link to customer who made purchase</description>
</CustomField>