force-app/main/default/objects/Journal_Sale__c/fields/Journal_Product__c.field-meta.xml
<CustomField>
    <fullName>Journal_Product__c</fullName>
    <label>Journal Product</label>
    <referenceTo>Journal_Product__c</referenceTo>
    <relationshipLabel>Journal Sales</relationshipLabel>
    <relationshipName>Journal_Sales</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <description>Link to journal product that was sold</description>
</CustomField>