force-app/main/default/objects/Journal_Sale__c/fields/Lulu_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Lulu_Error_Message__c</fullName>
    <label>Lulu Error Message</label>
    <length>255</length>
    <type>Text</type>
    <description>Error message from Lulu API if submission failed</description>
</CustomField>