force-app/main/default/objects/Journal_Sale__c/fields/Lulu_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Lulu_Job_ID__c</fullName>
    <label>Lulu Job ID</label>
    <length>100</length>
    <type>Text</type>
    <externalId>true</externalId>
    <description>Print job ID from Lulu API for order tracking</description>
</CustomField>