force-app/main/default/objects/Journal_Sale__c/fields/Lulu_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Lulu_Submission_Date__c</fullName>
    <label>Lulu Submission Date</label>
    <type>DateTime</type>
    <description>Date and time the order was submitted to Lulu API</description>
</CustomField>