force-app/main/default/objects/Journal_Sale__c/fields/Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_ID__c</fullName>
    <externalId>true</externalId>
    <label>Order ID</label>
    <length>50</length>
    <type>Text</type>
    <description>External order ID from Salesforce Commerce, Etsy, or Amazon</description>
</CustomField>