force-app/main/default/objects/Journal_Sale__c/fields/Sale_Date__c.field-meta.xml
<CustomField>
    <fullName>Sale_Date__c</fullName>
    <label>Sale Date</label>
    <required>true</required>
    <type>Date</type>
    <description>Date of sale</description>
</CustomField>