force-app/main/default/objects/Journal_Sale__c/fields/Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Sale_Price__c</fullName>
    <label>Sale Price</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
    <description>Total sale price (quantity × unit price)</description>
</CustomField>