force-app/main/default/objects/Journal_Sale__c/fields/Sale_Source__c.field-meta.xml
<CustomField>
    <fullName>Sale_Source__c</fullName>
    <label>Sale Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Storefront</fullName>
            </value>
            <value>
                <fullName>Amazon KDP</fullName>
            </value>
            <value>
                <fullName>Etsy</fullName>
            </value>
            <value>
                <fullName>Bundle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Sales channel where transaction occurred</description>
</CustomField>