force-app/main/default/objects/Journal_Sale__c/fields/Shipping_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_Line_1__c</fullName>
    <label>Shipping Address Line 1</label>
    <length>255</length>
    <type>Text</type>
    <required>true</required>
    <description>Street address for shipping</description>
</CustomField>