force-app/main/default/objects/Journal_Sale__c/fields/Shipping_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_Line_2__c</fullName>
    <label>Shipping Address Line 2</label>
    <length>255</length>
    <type>Text</type>
    <description>Apartment, suite, or unit number</description>
</CustomField>