force-app/main/default/objects/Journal_Sale__c/fields/Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>Shipping_City__c</fullName>
    <label>Shipping City</label>
    <length>100</length>
    <type>Text</type>
    <required>true</required>
    <description>City for shipping</description>
</CustomField>