force-app/main/default/objects/Journal_Sale__c/fields/Shipping_Country__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Country__c</fullName>
    <label>Shipping Country</label>
    <length>2</length>
    <type>Text</type>
    <required>true</required>
    <description>Two-letter country code (ISO 3166-1 alpha-2) - e.g., US, CA, GB</description>
</CustomField>