force-app/main/default/objects/Journal_Sale__c/fields/Shipping_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Postal_Code__c</fullName>
    <label>Shipping Postal Code</label>
    <length>20</length>
    <type>Text</type>
    <required>true</required>
    <description>Postal code or ZIP code for shipping</description>
</CustomField>