force-app/main/default/objects/Journal_Sale__c/fields/Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State__c</fullName>
    <label>Shipping State</label>
    <length>50</length>
    <type>Text</type>
    <required>true</required>
    <description>State or province code for shipping</description>
</CustomField>