force-app/main/default/objects/Journal_Sale__c/fields/Tracking_URL__c.field-meta.xml
<CustomField>
    <fullName>Tracking_URL__c</fullName>
    <label>Tracking URL</label>
    <type>Url</type>
    <description>Shipping tracking URL from carrier</description>
</CustomField>